--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -88,6 +88,7 @@ body {
 }
 
 .side-content {
+  padding: 30px 0;
   width: 100%;
   flex: 1;
   -webkit-flex: 1;
@@ -126,7 +127,7 @@ body {
 .side-btn-group {
   position: absolute;
   width: 100%;
-  height: 100px;
+  height: 150px;
   bottom: 20px;
 }
 
@@ -164,7 +165,7 @@ body {
 }
 
 .container {
-  height: 100%;
+  height: calc(100% - 20px);
   flex: 1;
   -webkit-flex: 1;
   display: -webkit-flex;
@@ -236,7 +237,7 @@ body {
   font-weight: 200;
 }
 
-#invite, #speaker, #profile {
+#invite, #talks, #interview, #profile {
   width: 90px;
   height: 35px;
   margin: 5px 30px;
@@ -282,19 +283,24 @@ body {
 }
 
 .video {
-  height: 200px;
+  /* height: 200px; */
+  width: calc(100% - 40px);
   margin: 10px 20px;
 }
 
 .video video {
   width: 100%;
+  /* height: 100%; */
 }
 
 .description {
   flex: 1;
   margin: 0px 20px;
   font-size: 14px;
-  overflow: scroll;
+  overflow-y: scroll;
+}
+.description::-webkit-scrollbar{
+  display: none;
 }
 
 .content-btn-group {
@@ -326,15 +332,6 @@ body {
 
 .side-nav .active {
   color: #e03f2f;
-}
-
-.side-nav span:first-child {
-  float: left;
-}
-
-.side-nav span:last-child {
-  float: right;
-  color: #666666;
 }
 
 .speaker-list {
